# AdventOfCode

./: Cargo.toml  prepareDay.sh
inputs/: input-2021-day06
src/: bingo.rs  bitaccumulator.rs  calories.rs  cli.yaml  command.rs  coordinates.rs  lanternfish.rs  lib.rs  main.rs  position.rs  rockpaperscissors.rs  rucksacks.rs  segment_display.rs
src/old/: bingo.rs  bitaccumulator.rs  calories.rs  command.rs  coordinates.rs  crabs.rs  position.rs  valuemap.rs
